[gd_scene load_steps=29 format=3 uid="uid://ht0m73d0g8i1"]

[ext_resource type="PackedScene" uid="uid://dao4cui0qcwt8" path="res://common/ui/bg.tscn" id="1_biub3"]
[ext_resource type="Texture2D" uid="uid://bb10gb0k1xm50" path="res://launch/launch_button.png" id="2_g5s16"]
[ext_resource type="Script" uid="uid://d0iufbplf185f" path="res://launch/logic_manager.gd" id="3_hnj5t"]
[ext_resource type="FontFile" uid="uid://csdy5bm6finb1" path="res://common/fonts/BitPap2.ttf" id="3_mblij"]
[ext_resource type="Texture2D" uid="uid://b0uo33fq8f1xy" path="res://launch/boost_panel.png" id="4_mjflk"]
[ext_resource type="Script" uid="uid://dw0qeng2wp68b" path="res://launch/boost_panel.gd" id="5_cki18"]
[ext_resource type="Texture2D" uid="uid://b4hepitt716om" path="res://launch/boost_price.png" id="6_16fmq"]
[ext_resource type="PackedScene" uid="uid://dave5iobvcma4" path="res://common/ui/boost/boost_display.tscn" id="9_mietp"]
[ext_resource type="Script" uid="uid://bsso1e0xprqw4" path="res://launch/item_selection.gd" id="13_3o13n"]
[ext_resource type="Texture2D" uid="uid://c0c47vfyeijot" path="res://launch/item panel/item_panel.png" id="13_cki18"]
[ext_resource type="Texture2D" uid="uid://conah23ra7nl5" path="res://merchant/items/target_practice.png" id="14_r42je"]
[ext_resource type="Texture2D" uid="uid://btuwt0ty2ti0n" path="res://merchant/items/stopwatch.png" id="15_31hde"]
[ext_resource type="Texture2D" uid="uid://de4hdmosahrlx" path="res://launch/launch_button_press.png" id="15_44m22"]
[ext_resource type="Texture2D" uid="uid://pjby0f04xef6" path="res://common/minerals/corundum.png" id="15_drkyd"]
[ext_resource type="Texture2D" uid="uid://d3hnthm8nukg1" path="res://merchant/items/pickaxe.png" id="16_drkyd"]
[ext_resource type="FontFile" uid="uid://5jasf4bxnkqr" path="res://common/fonts/two pixels wide.ttf" id="16_j2rp3"]
[ext_resource type="Texture2D" uid="uid://dpjbcsk2wnxvp" path="res://launch/launch_button_hover.png" id="16_mu27l"]
[ext_resource type="Texture2D" uid="uid://dsw3qyde546te" path="res://merchant/items/harvesting.png" id="17_1hrc4"]
[ext_resource type="Texture2D" uid="uid://dnm7872i6jbbf" path="res://merchant/items/combo.png" id="18_3o13n"]
[ext_resource type="Texture2D" uid="uid://dilmm6pfj1skq" path="res://launch/launch_button_disabled.png" id="18_mu27l"]
[ext_resource type="Texture2D" uid="uid://c8kmoqgdryjcn" path="res://merchant/items/boxing_gloves.png" id="19_j2rp3"]
[ext_resource type="Texture2D" uid="uid://c2a56416x4to7" path="res://merchant/items/question_mark.png" id="21_8s8mn"]
[ext_resource type="Shader" uid="uid://d1sjv3im4myv3" path="res://common/shaders/colour_replacement.gdshader" id="23_j2rp3"]
[ext_resource type="Texture2D" uid="uid://ctp0u7d2j72xr" path="res://launch/item panel/circle.png" id="24_85kov"]
[ext_resource type="Texture2D" uid="uid://cuxlh12gn7wbg" path="res://launch/item panel/locked.png" id="25_8s8mn"]
[ext_resource type="Texture2D" uid="uid://cfc5hw42vjrvi" path="res://merchant/description_panel.png" id="26_85kov"]
[ext_resource type="PackedScene" uid="uid://cl5ov5nvhs82d" path="res://common/ui/close_tab/close_tab.tscn" id="26_j2rp3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a4pas"]
shader = ExtResource("23_j2rp3")
shader_parameter/original_colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/replacement_colors = PackedColorArray(0.803922, 0.407843, 0.239216, 1, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/threshold = 0.01

[node name="Launch" type="Node2D"]

[node name="BG" parent="." instance=ExtResource("1_biub3")]
metadata/_edit_lock_ = true

[node name="LogicManager" type="Node2D" parent="."]
position = Vector2(69, 7)
script = ExtResource("3_hnj5t")
metadata/_edit_lock_ = true

[node name="Boost" type="Node2D" parent="LogicManager"]
position = Vector2(203, 150)
script = ExtResource("5_cki18")

[node name="BoostPanel" type="Sprite2D" parent="LogicManager/Boost"]
position = Vector2(0, -86)
texture = ExtResource("4_mjflk")

[node name="BoostPrice" type="Sprite2D" parent="LogicManager/Boost"]
texture = ExtResource("6_16fmq")

[node name="Corundum" type="Sprite2D" parent="LogicManager/Boost"]
position = Vector2(-24, 0)
texture = ExtResource("15_drkyd")

[node name="PriceBeforeDiscount" type="Label" parent="LogicManager/Boost"]
offset_left = -11.0
offset_top = -14.0
offset_right = 29.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0.619608, 0.270588, 0.223529, 1)
theme_override_fonts/font = ExtResource("3_mblij")
text = "2.22m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscountCross" type="ColorRect" parent="LogicManager/Boost"]
offset_left = 29.0
offset_top = -9.0
offset_right = 72.0
offset_bottom = -7.0
rotation = 3.02522
color = Color(0.619608, 0.270588, 0.223529, 1)

[node name="PriceAfterDiscount" type="Label" parent="LogicManager/Boost"]
offset_left = -11.0
offset_right = 29.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.619608, 0.270588, 0.223529, 1)
theme_override_fonts/font = ExtResource("3_mblij")
text = "2.22m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoostDisplay" parent="LogicManager/Boost" instance=ExtResource("9_mietp")]
position = Vector2(-22, -132)

[node name="Launch" type="TextureButton" parent="LogicManager"]
offset_top = 119.0
offset_right = 158.0
offset_bottom = 169.0
texture_normal = ExtResource("2_g5s16")
texture_pressed = ExtResource("15_44m22")
texture_hover = ExtResource("16_mu27l")
texture_disabled = ExtResource("18_mu27l")

[node name="Label" type="Label" parent="LogicManager/Launch"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.132911
anchor_top = 0.08
anchor_right = 0.132911
anchor_bottom = 0.08
offset_right = 114.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("3_mblij")
theme_override_font_sizes/font_size = 48
text = "LAUNCH"
metadata/_edit_use_anchors_ = true

[node name="ItemSelection" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 70.0
offset_top = 8.0
offset_right = 182.0
offset_bottom = 118.0
script = ExtResource("13_3o13n")

[node name="Items" type="MarginContainer" parent="ItemSelection"]
layout_mode = 2
offset_right = 112.0
offset_bottom = 110.0

[node name="NinePatchRect" type="NinePatchRect" parent="ItemSelection/Items"]
layout_mode = 2
texture = ExtResource("13_cki18")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="ItemSelection/Items"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 3

[node name="GridContainer" type="GridContainer" parent="ItemSelection/Items/MarginContainer"]
layout_mode = 2
columns = 3

[node name="TextureRect" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
self_modulate = Color(1, 1, 1, 0.243137)
layout_mode = 2
texture = ExtResource("14_r42je")
stretch_mode = 5

[node name="Label" type="Label" parent="ItemSelection/Items/MarginContainer/GridContainer/TextureRect"]
layout_mode = 0
offset_left = 26.0
offset_top = 26.0
offset_right = 32.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0.180392, 0.133333, 0.184314, 1)
theme_override_fonts/font = ExtResource("16_j2rp3")
theme_override_font_sizes/font_size = 6
text = "12"

[node name="TextureRect10" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
self_modulate = Color(1, 1, 1, 0.243137)
layout_mode = 2
texture = ExtResource("15_31hde")
stretch_mode = 5

[node name="Label" type="Label" parent="ItemSelection/Items/MarginContainer/GridContainer/TextureRect10"]
layout_mode = 0
offset_left = 26.0
offset_top = 26.0
offset_right = 32.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("16_j2rp3")
theme_override_font_sizes/font_size = 6
text = "3"

[node name="TextureRect11" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
self_modulate = Color(1, 1, 1, 0.243137)
layout_mode = 2
texture = ExtResource("16_drkyd")
stretch_mode = 5

[node name="Label" type="Label" parent="ItemSelection/Items/MarginContainer/GridContainer/TextureRect11"]
layout_mode = 0
offset_left = 26.0
offset_top = 26.0
offset_right = 32.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("16_j2rp3")
theme_override_font_sizes/font_size = 6
text = "12"

[node name="TextureRect3" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("16_drkyd")

[node name="TextureRect4" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("17_1hrc4")

[node name="TextureRect5" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("18_3o13n")

[node name="TextureRect6" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("19_j2rp3")

[node name="TextureRect8" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("21_8s8mn")

[node name="TextureRect9" type="TextureRect" parent="ItemSelection/Items/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("21_8s8mn")

[node name="Capacity" type="MarginContainer" parent="ItemSelection"]
layout_mode = 2
offset_left = 112.0
offset_top = 38.0
offset_right = 161.0
offset_bottom = 100.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="NinePatchRect" type="NinePatchRect" parent="ItemSelection/Capacity"]
layout_mode = 2
texture = ExtResource("13_cki18")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="ItemSelection/Capacity"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="VBoxContainer" parent="ItemSelection/Capacity/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ItemSelection/Capacity/MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_a4pas")
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("24_85kov")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="ItemSelection/Capacity/MarginContainer/HBoxContainer"]
modulate = Color(0.43, 0.15, 0.15, 1)
layout_mode = 2
texture = ExtResource("24_85kov")
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="ItemSelection/Capacity/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("25_8s8mn")
stretch_mode = 3

[node name="TextureRect4" type="TextureRect" parent="ItemSelection/Capacity/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("25_8s8mn")
stretch_mode = 3

[node name="DescriptionPanel" type="NinePatchRect" parent="ItemSelection"]
layout_mode = 0
offset_left = -70.0
offset_top = 136.0
offset_right = 250.0
offset_bottom = 172.0
texture = ExtResource("26_85kov")
patch_margin_left = 2
patch_margin_top = 4
patch_margin_right = 4

[node name="DescriptionText" type="RichTextLabel" parent="ItemSelection"]
clip_contents = false
layout_mode = 0
offset_left = -68.0
offset_top = 140.0
offset_right = 246.0
offset_bottom = 172.0
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.431373, 0.152941, 0.152941, 1)
theme_override_fonts/normal_font = ExtResource("3_mblij")
bbcode_enabled = true
text = "[color=#2e222f]boxing glove: [/color]first [color=#91db69]5[/color] clicks do 22.2x damage
test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseTab" parent="." instance=ExtResource("26_j2rp3")]
z_index = 0
offset_left = 190.0
offset_top = 11.0
offset_right = 222.0
offset_bottom = 43.0

[connection signal="progress_changed" from="LogicManager/Boost/BoostDisplay" to="LogicManager" method="_on_boost_display_progress_changed"]
[connection signal="pressed" from="LogicManager/Launch" to="LogicManager" method="_on_launch_pressed"]
[connection signal="pressed" from="LogicManager/Launch" to="LogicManager/Launch" method="_on_pressed"]
